{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 181,
  "lineage": "fee52b2b-0b0d-6780-aa91-4e84e4a1d924",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05db1f76bf2910846",
            "arn": "arn:aws:ec2:us-east-1:420053132464:elastic-ip/eipalloc-05db1f76bf2910846",
            "association_id": "eipassoc-02c2018cafc94085f",
            "domain": "vpc",
            "id": "eipalloc-05db1f76bf2910846",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c8c88bd226f20f08",
            "private_dns": "ip-13-0-1-55.ec2.internal",
            "private_ip": "13.0.1.55",
            "public_dns": "ec2-34-231-250-13.compute-1.amazonaws.com",
            "public_ip": "34.231.250.13",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "NAT-EIP"
            },
            "tags_all": {
              "Name": "NAT-EIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apptier-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:420053132464:instance/i-0d105270207070e85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d105270207070e85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03a6f3cccfe266307"
              }
            ],
            "primary_network_interface_id": "eni-03a6f3cccfe266307",
            "private_dns": "ip-13-0-3-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "13.0.3.77",
            "public_ip": "54.198.66.246",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0599bd390725888b4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091025316f46a9a70",
            "tags": {
              "Name": "apptier-1"
            },
            "tags_all": {
              "Name": "apptier-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e621ed4a1c079559"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "i-0d105270207070e85",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.common_sg",
            "aws_subnet.private-1",
            "aws_vpc.ch-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apptier-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:420053132464:instance/i-0d5b2e6dc2e2992d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5b2e6dc2e2992d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0de5023a21dd1ab62"
              }
            ],
            "primary_network_interface_id": "eni-0de5023a21dd1ab62",
            "private_dns": "ip-13-0-4-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "13.0.4.55",
            "public_ip": "35.175.115.15",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0847ac56a33c32c50",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01741667f2f443bf7",
            "tags": {
              "Name": "apptier-2"
            },
            "tags_all": {
              "Name": "apptier-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e621ed4a1c079559"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "i-0d5b2e6dc2e2992d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.common_sg",
            "aws_subnet.private-2",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webtier-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:420053132464:instance/i-0467474a3dd45048f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0467474a3dd45048f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bb3899403cb6fe4d"
              }
            ],
            "primary_network_interface_id": "eni-0bb3899403cb6fe4d",
            "private_dns": "ip-13-0-1-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "13.0.1.81",
            "public_ip": "50.17.26.11",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01989e994a2c40ac6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015f7235479bc4a7e",
            "tags": {
              "Name": "webtier-1"
            },
            "tags_all": {
              "Name": "webtier-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e621ed4a1c079559"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "i-0467474a3dd45048f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.common_sg",
            "aws_subnet.public-1",
            "aws_vpc.ch-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webtier-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:420053132464:instance/i-08f2c262160da55ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f2c262160da55ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c4533cc0ffd2a25a"
              }
            ],
            "primary_network_interface_id": "eni-0c4533cc0ffd2a25a",
            "private_dns": "ip-13-0-2-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "13.0.2.204",
            "public_ip": "44.222.80.102",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01af1069f7e915718",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec093be66dbae1e9",
            "tags": {
              "Name": "webtier-2"
            },
            "tags_all": {
              "Name": "webtier-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e621ed4a1c079559"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "i-08f2c262160da55ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.common_sg",
            "aws_subnet.public-2",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:internet-gateway/igw-0c2326fcd9bd07e16",
            "id": "igw-0c2326fcd9bd07e16",
            "owner_id": "420053132464",
            "region": "us-east-1",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "apptierlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/apptier-lb/913af5e9f0c3473d",
            "arn_suffix": "app/apptier-lb/913af5e9f0c3473d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "apptier-lb-1599557972.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/apptier-lb/913af5e9f0c3473d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apptier-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e621ed4a1c079559"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01741667f2f443bf7"
              },
              {
                "subnet_id": "subnet-091025316f46a9a70"
              }
            ],
            "subnets": [
              "subnet-01741667f2f443bf7",
              "subnet-091025316f46a9a70"
            ],
            "tags": {
              "Name": "apptier-lb"
            },
            "tags_all": {
              "Name": "apptier-lb"
            },
            "vpc_id": "vpc-04487230b9d7ec9a0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/apptier-lb/913af5e9f0c3473d"
          },
          "dependencies": [
            "aws_security_group.common_sg",
            "aws_subnet.private-1",
            "aws_subnet.private-2",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webtierlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/webtier-lb/c0ffcc4803bedc56",
            "arn_suffix": "app/webtier-lb/c0ffcc4803bedc56",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webtier-lb-202395189.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/webtier-lb/c0ffcc4803bedc56",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webtier-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e621ed4a1c079559"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015f7235479bc4a7e"
              },
              {
                "subnet_id": "subnet-0ec093be66dbae1e9"
              }
            ],
            "subnets": [
              "subnet-015f7235479bc4a7e",
              "subnet-0ec093be66dbae1e9"
            ],
            "tags": {
              "Name": "webtier-lb"
            },
            "tags_all": {
              "Name": "webtier-lb"
            },
            "vpc_id": "vpc-04487230b9d7ec9a0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/webtier-lb/c0ffcc4803bedc56"
          },
          "dependencies": [
            "aws_security_group.common_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:listener/app/apptier-lb/913af5e9f0c3473d/791944ef98c958f6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/apptier-tg/685999ea054f2ef4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:listener/app/apptier-lb/913af5e9f0c3473d/791944ef98c958f6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/apptier-lb/913af5e9f0c3473d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:listener/app/apptier-lb/913af5e9f0c3473d/791944ef98c958f6"
          },
          "dependencies": [
            "aws_lb.apptierlb",
            "aws_lb_target_group.apptiertg",
            "aws_security_group.common_sg",
            "aws_subnet.private-1",
            "aws_subnet.private-2",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webtier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:listener/app/webtier-lb/c0ffcc4803bedc56/e6f911b00544f15e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/webtier-tg/461d7131f4efd820",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:listener/app/webtier-lb/c0ffcc4803bedc56/e6f911b00544f15e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/webtier-lb/c0ffcc4803bedc56",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:listener/app/webtier-lb/c0ffcc4803bedc56/e6f911b00544f15e"
          },
          "dependencies": [
            "aws_lb.webtierlb",
            "aws_lb_target_group.webtiertg",
            "aws_security_group.common_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apptiertg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/apptier-tg/685999ea054f2ef4",
            "arn_suffix": "targetgroup/apptier-tg/685999ea054f2ef4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/apptier-tg/685999ea054f2ef4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/apptier-lb/913af5e9f0c3473d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apptier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "apptier-tg"
            },
            "tags_all": {
              "Name": "apptier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/apptier-tg/685999ea054f2ef4"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webtiertg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/webtier-tg/461d7131f4efd820",
            "arn_suffix": "targetgroup/webtier-tg/461d7131f4efd820",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/webtier-tg/461d7131f4efd820",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:420053132464:loadbalancer/app/webtier-lb/c0ffcc4803bedc56"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webtier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "webtier-tg"
            },
            "tags_all": {
              "Name": "webtier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/webtier-tg/461d7131f4efd820"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apptier-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/apptier-tg/685999ea054f2ef4-20251001153613955800000009",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/apptier-tg/685999ea054f2ef4",
            "target_id": "i-0d105270207070e85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.apptier-1",
            "aws_lb_target_group.apptiertg",
            "aws_security_group.common_sg",
            "aws_subnet.private-1",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apptier-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/apptier-tg/685999ea054f2ef4-2025100115361397500000000a",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/apptier-tg/685999ea054f2ef4",
            "target_id": "i-0d5b2e6dc2e2992d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.apptier-2",
            "aws_lb_target_group.apptiertg",
            "aws_security_group.common_sg",
            "aws_subnet.private-2",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webtier-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/webtier-tg/461d7131f4efd820-2025100115361438650000000b",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/webtier-tg/461d7131f4efd820",
            "target_id": "i-0467474a3dd45048f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.webtier-1",
            "aws_lb_target_group.webtiertg",
            "aws_security_group.common_sg",
            "aws_subnet.public-1",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webtier-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/webtier-tg/461d7131f4efd820-2025100115361445230000000c",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:420053132464:targetgroup/webtier-tg/461d7131f4efd820",
            "target_id": "i-08f2c262160da55ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.webtier-2",
            "aws_lb_target_group.webtiertg",
            "aws_security_group.common_sg",
            "aws_subnet.public-2",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05db1f76bf2910846",
            "association_id": "eipassoc-02c2018cafc94085f",
            "connectivity_type": "public",
            "id": "nat-098231ecd74427189",
            "network_interface_id": "eni-0c8c88bd226f20f08",
            "private_ip": "13.0.1.55",
            "public_ip": "34.231.250.13",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-015f7235479bc4a7e",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-1",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:route-table/rtb-08676f2923d450131",
            "id": "rtb-08676f2923d450131",
            "owner_id": "420053132464",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-098231ecd74427189",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-RT"
            },
            "tags_all": {
              "Name": "private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "rtb-08676f2923d450131",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public-1",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:route-table/rtb-0257fc9ea919b3e9a",
            "id": "rtb-0257fc9ea919b3e9a",
            "owner_id": "420053132464",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2326fcd9bd07e16",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "tags_all": {
              "Name": "public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "rtb-0257fc9ea919b3e9a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4353a0c58b3ac24",
            "region": "us-east-1",
            "route_table_id": "rtb-0257fc9ea919b3e9a",
            "subnet_id": "subnet-015f7235479bc4a7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_RT",
            "aws_subnet.public-1",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fae258806500361",
            "region": "us-east-1",
            "route_table_id": "rtb-0257fc9ea919b3e9a",
            "subnet_id": "subnet-0ec093be66dbae1e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_RT",
            "aws_subnet.public-2",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049485032412277c6",
            "region": "us-east-1",
            "route_table_id": "rtb-08676f2923d450131",
            "subnet_id": "subnet-091025316f46a9a70"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_RT",
            "aws_subnet.private-1",
            "aws_subnet.public-1",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059725fc8871ea79f",
            "region": "us-east-1",
            "route_table_id": "rtb-08676f2923d450131",
            "subnet_id": "subnet-01741667f2f443bf7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_RT",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a91631c658dc653",
            "region": "us-east-1",
            "route_table_id": "rtb-08676f2923d450131",
            "subnet_id": "subnet-084e8ced6db4de52d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_RT",
            "aws_subnet.private-3",
            "aws_subnet.public-1",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0821f418c456742d6",
            "region": "us-east-1",
            "route_table_id": "rtb-08676f2923d450131",
            "subnet_id": "subnet-0e9327f5ff57b831e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_RT",
            "aws_subnet.private-4",
            "aws_subnet.public-1",
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:security-group/sg-0e621ed4a1c079559",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e621ed4a1c079559",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251001153550255100000001",
            "name_prefix": "terraform-",
            "owner_id": "420053132464",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "common-sg"
            },
            "tags_all": {
              "Name": "common-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "sg-0e621ed4a1c079559",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:security-group/sg-09cae17be5c357ff0",
            "description": "Allow MySQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cae17be5c357ff0",
            "ingress": [
              {
                "cidr_blocks": [
                  "13.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-mysql",
            "name_prefix": "",
            "owner_id": "420053132464",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "sg-09cae17be5c357ff0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:subnet/subnet-091025316f46a9a70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "13.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091025316f46a9a70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420053132464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "subnet-091025316f46a9a70",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:subnet/subnet-01741667f2f443bf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "13.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01741667f2f443bf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420053132464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "subnet-01741667f2f443bf7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:subnet/subnet-084e8ced6db4de52d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "13.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084e8ced6db4de52d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420053132464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-3"
            },
            "tags_all": {
              "Name": "private-3"
            },
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "subnet-084e8ced6db4de52d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:subnet/subnet-0e9327f5ff57b831e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "13.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9327f5ff57b831e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420053132464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-4"
            },
            "tags_all": {
              "Name": "private-4"
            },
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "subnet-0e9327f5ff57b831e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:subnet/subnet-015f7235479bc4a7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "13.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015f7235479bc4a7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420053132464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "subnet-015f7235479bc4a7e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:subnet/subnet-0ec093be66dbae1e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "13.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec093be66dbae1e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420053132464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-04487230b9d7ec9a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420053132464",
            "id": "subnet-0ec093be66dbae1e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ch-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ch-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420053132464:vpc/vpc-04487230b9d7ec9a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "13.0.0.0/16",
            "default_network_acl_id": "acl-0eeb5b08a400e4e52",
            "default_route_table_id": "rtb-0eaac467d89bd01d1",
            "default_security_group_id": "sg-029a7f9df9ef1b59f",
            "dhcp_options_id": "dopt-027a88df764439e01",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04487230b9d7ec9a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eaac467d89bd01d1",
            "owner_id": "420053132464",
            "region": "us-east-1",
            "tags": {
              "Name": "Project-3"
            },
            "tags_all": {
              "Name": "Project-3"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}